Added javadocs, updated build.gradle